# emotion_detector

./: README.md  detector.py  gpu.py  package.xml  requirements.txt  setup.py  trainer.py
emotion_detector/: camera.py  emotion.py  emotion_coral.py
launch/: emotionDetector.launch.py
models/: fer2013_mini_XCEPTION.208-0.61.keras  mini_XCEPTION_int8_edgetpu.tflite
resource/: requirements.txt
rviz/: emotion.rviz
train/: convert_to_tflite.py  requirements.txt
train/requirements/: requirements.txt
train/src/: train_emotion_classifier.py
train/src/models/: cnn.py
train/src/utils/: datasets.py
train/trained_models/emotion_models/: coral_emotion.py  mini_XCEPTION_int8.tflite  test.py
