<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emotion_detector</name>
  <version>1.0.0</version>
  <description>Package that uses opencv and haarcascade to recognize facial emotions</description>
  <maintainer email="miguel_gonzalezr@ieee.org">Miguel Angel Gonzalez Rodriguez</maintainer>
  <license>BBSD-3</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
